fixing safari layout bugs

--- a/css/styles.css
+++ b/css/styles.css
@@ -51,15 +51,19 @@ body {
 .flex-small {
   flex-grow: 1;
   background-color: blue;
-  height: 100%;
+  height: 50%;
 }
 
 .flexmain .column {
   flex-direction: column;
+  flex-grow: 1;
 }
 
 .flexbio {
   display: flex;
+}
+
+.flexbio .flex-small {
   height: 50vh;
 }
 
